Fix overlap issue in small viewports

--- a/src/components/Camera/Permissions/Recover/style.css
+++ b/src/components/Camera/Permissions/Recover/style.css
@@ -1,5 +1,12 @@
 @import (less) "../../../Theme/constants.css";
 
+.container {
+  @media (--small-viewport) {
+    position: relative;
+    height: auto;
+  }
+}
+
 .text {
   margin-top: 64px;
   margin-bottom: 80px;
